--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,10 @@ Necessário se for usar localização em segundo plano
             android:name="com.google.android.geo.API_KEY"
             android:value="${MAPS_API_KEY}" />
         <activity
-            android:name="br.edu.uniritter.gps.gps.view.MapActivity"
+            android:name="br.edu.uniritter.gps.views.MapActivity"
             android:exported="false" />
         <activity
-            android:name="br.edu.uniritter.gps.gps.view.LoginActivity"
+            android:name="br.edu.uniritter.gps.views.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,11 +35,11 @@ Necessário se for usar localização em segundo plano
             </intent-filter>
         </activity>
         <activity
-            android:name="br.edu.uniritter.gps.gps.view.LandActivity"
+            android:name="br.edu.uniritter.gps.views.LandActivity"
             android:exported="true" />
 
         <receiver
-            android:name="br.edu.uniritter.gps.receiver.GPSBroadcastReceiver"
+            android:name="br.edu.uniritter.gps.broadcastreceiver.GPSBroadcastReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
@@ -56,7 +56,7 @@ Necessário se for usar localização em segundo plano
         </receiver>
 
         <service
-            android:name="br.edu.uniritter.gps.receiver.GPSService"
+            android:name="br.edu.uniritter.gps.services.GPSService"
             android:exported="true"
             android:foregroundServiceType="location" />
 
@@ -64,7 +64,7 @@ Necessário se for usar localização em segundo plano
             android:name="br.edu.uniritter.gps.views.GPSActivity"
             android:exported="false" />
         <activity
-            android:name="br.edu.uniritter.gps.gps.view.MainActivity"
+            android:name="br.edu.uniritter.gps.views.MainActivity"
             android:exported="true">
 
             <!--
